[akshay]: Refactored the code
